# write-BLE-stack-from-scratch

./: README.md
.github/workflows/: ble-demo-ci.yml  ble-hardware-smoke.yml
00_phy_raw_tx/: CMakeLists.txt  prj.conf
00_phy_raw_tx/src/: main.c
01_phy_adv_scan/: CMakeLists.txt  prj.conf
01_phy_adv_scan/src/: main.c
01_tx_advertise/: CMakeLists.txt  prj_bsim.conf
01_tx_advertise/src/: ble_common.h  hal_radio.c  hal_radio.h  main.c
02_active_scan/: CMakeLists.txt  prj.conf
02_active_scan/src/: adv.c  adv.h  ble_common.h  hal_radio.c  hal_radio.h  ll_pdu.c  ll_pdu.h  main.c
02_phy_tifs_hw/src/: main.c
02_scannable_adv/: CMakeLists.txt
02_scannable_adv/src/: main.c
03_phy_anchor/: CMakeLists.txt
03_phy_anchor/src/: main.c
03_phy_connect_ind/: CMakeLists.txt  prj.conf
03_phy_connect_ind/src/: adv.c  adv.h  ble_common.h  hal_radio.c  hal_radio.h  ll_pdu.c  ll_pdu.h  main.c
04_phy_connection/: CMakeLists.txt  prj.conf
04_phy_connection/src/: main.c
04_phy_first_anchor/: CMakeLists.txt  prj.conf
04_phy_first_anchor/src/: adv.c  adv.h  ble_common.h  conn.c  conn.h  hal_radio.c  hal_radio.h  ll_pdu.c  ll_pdu.h  main.c
05_phy_anchor_adjust/: CMakeLists.txt  prj.conf
05_phy_anchor_adjust/src/: main.c
05_phy_conn_loop/: CMakeLists.txt  prj.conf
05_phy_conn_loop/src/: adv.c  adv.h  ble_common.h  conn.c  conn.h  hal_radio.c  hal_radio.h  ll_pdu.c  ll_pdu.h  main.c
06_phy_anchor/: CMakeLists.txt
06_phy_anchor/src/: adv.c  adv.h  ble_common.h  conn.c  conn.h  hal_radio.c  hal_radio.h  ll_pdu.c  ll_pdu.h  main.c
06_phy_data_channel/: CMakeLists.txt  prj.conf
07_phy_data_channel/: CMakeLists.txt
07_phy_data_channel/src/: ble_common.h  conn.c  conn.h  hal_radio.h  l2cap.c  ll_pdu.h  main.c
07_phy_slave_latency/: CMakeLists.txt
07_phy_slave_latency/src/: main.c
08_phy_ll_procedures/: CMakeLists.txt
08_phy_ll_procedures/src/: main.c
08_phy_slave_latency/: CMakeLists.txt  prj.conf
08_phy_slave_latency/src/: adv.c  ble_common.h  conn.c  conn.h  l2cap.c  l2cap.h  ll_pdu.c  main.c
09_phy_hci/: CMakeLists.txt
09_phy_hci/src/: main.c
09_phy_ll_procedures/: CMakeLists.txt  prj.conf
09_phy_ll_procedures/src/: ble_common.h  conn.c  ll_pdu.c  ll_pdu.h  main.c
10_phy_hci/: CMakeLists.txt
10_phy_hci/src/: adv.h  ble_common.h  conn.c  conn.h  hal_radio.c  hci.c  hci.h  ll_pdu.c  main.c
10_phy_multi_pdu/: CMakeLists.txt
10_phy_multi_pdu/src/: main.c
11_phy_slave_procedures/: CMakeLists.txt
11_phy_slave_procedures/src/: main.c
12_phy_l2cap_sig/: CMakeLists.txt
12_phy_l2cap_sig/src/: main.c
13_phy_encryption/: CMakeLists.txt
13_phy_encryption/src/: main.c
14_phy_smp/: CMakeLists.txt
14_phy_smp/src/: main.c
15_phy_att/: CMakeLists.txt  prj.conf
15_phy_att/src/: main.c
16_phy_gatt/: CMakeLists.txt
16_phy_gatt/src/: main.c
stack/: adv.c  adv.h  anchor.c  anchor.h  att.c  att.h  ble_common.h  compat_globals.c  conn.c  conn.h  conn_event.c  conn_event.h  crypto.c  crypto.h  gatt_db.c  gatt_db.h  hal_radio.c  hal_radio.h  hci.c  hci.h  l2cap.c  l2cap.h  ll_pdu.c  ll_pdu.h  ll_procedure.c  ll_procedure.h  scan.c  scan.h  slave_latency.c  slave_latency.h  smp.c  smp.h
tools/: bumble_connect.py  bumble_l2cap_echo.py  bumble_scan_req.py
